Jueg con css actualizado

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.2",
     "web-vitals": "^4.2.4"
   }
 }
